Bug 1382649 - Unset dom.ipc.processCount pref value should be taken as a user opt-in value if browser.preferences.defaultPerformanceSettings.enabled is false. r=mrbkap, a=jcristau

MozReview-Commit-ID: 5zSix0koTc4